[package]
name = "pqc_password_manager"
version = "0.1.0"
edition = "2024"

authors = ["Florian Scholz <scholzf@uni-bremen.de>"]
description = "PQC-secure Password Manager in Rust"
license = "MIT"

[dependencies]
clap = { version = "4.2", features = ["derive"] }

pqc_kyber = { version = "0.7.0", features = ["kyber512", "std"] }

chacha20poly1305 = "0.10.0"

argon2 = "0.5.3"

rusqlite = { version = "0.37.0", features = ["bundled"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.8"

base64 = "0.22"

hex = "0.4"

rpassword = "7.0"

dirs = "6.0.0"

zeroize = { version = "1.7", features = ["zeroize_derive"] }

chrono = { version = "0.4", features = ["serde"] }

hmac = "0.12"
sha1 = "0.10"
base32 = "0.4"
url = "2.4"

totp-rs = "5.4"
keyring = "2.0"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Security_Credentials"] }

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = "3.0"
